--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/dotenv": "^8.2.3",
     "@types/ioredis": "^5.0.0",
     "@types/mongoose": "^5.11.97",
+    "@types/mongoose-delete": "^1.0.6",
     "@types/node": "^22.13.1",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
@@ -29,6 +30,7 @@
     "helmet": "^8.0.0",
     "ioredis": "^5.5.0",
     "mongoose": "^8.10.1",
+    "mongoose-delete": "^1.0.2",
     "zod": "^3.24.2"
   }
 }
